2010-01-09  Piotr Fusik  <fox@scene.pl>
* csharp/ASAP.ppcs: changed ASAP_State from public to internal

* asap.c, java/ASAP.ppjava, javascript/asap.ppjs:
  reduced number of #ifdefs in ASAP_Generate

* asap.c: fixed RMT time detection
  (java.lang.ArrayIndexOutOfBoundsException: 15 on aurora_m.rmt)

* asap.c, anylang.h, ASAP.ppjava: Java now reads resources to byte arrays,
  which are then handled like in other languages

* asap.c, anylang.h, csharp/Makefile:
  use initialized byte arrays and not resources in C#

* java/ASAP.ppjava, java/ASAP2WAV.java, java/ASAPApplet.java,
  java/ASAPMIDlet.java: moved common code to readAndClose()


2010-01-06  Piotr Fusik  <fox@scene.pl>
* asap.c, anylang.h, csharp/ASAP.ppcs:
  unified SAP header parsing across programming languages


2009-12-30  Piotr Fusik  <fox@scene.pl>
* flash/ASAPPlayer.as: FlashVars with file and no song should play default
  and not first song

* win32/dshow/asap_dsf.cpp, win32/setup/asap.wxs:
  add file types to Windows Media Player "Open" dialog


2009-12-23  Piotr Fusik  <fox@scene.pl>
* win32/gui.c: toggling "Loop" didn't enable the "Save" button
  (introduced last days, spotted by Slaves)


2009-12-22  Piotr Fusik  <fox@scene.pl>
* win32/gui.c: "Loop" in File Information wasn't initially disabled
  for SAP files with no TIME (spotted by Slaves)


2009-12-21  Piotr Fusik  <fox@scene.pl>
* win32/gui.c: improved File Information validation:
  validate Time when leaving this field not while typing;
  disable Loop when Time is empty;
  don't ask to save when information is invalid;
  message boxes on Windows which don't do balloon tips (pre-XP)


2009-12-20  Piotr Fusik  <fox@scene.pl>
* win32/gui.c: "Convert" file selector had no file type filter


2009-12-19  Piotr Fusik  <fox@scene.pl>
* win32/gui.c, win32/wasap/wasap.c, win32/winamp/in_asap.c:
  replaced appendInt() with sprintf()

* asap.c, anylang.h: refactored ASAP_ParseDuration;
  strict validation of TIME tags
